--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -4,7 +4,7 @@
     position: relative;
     overflow-x: hidden;
     background: var(--body-color);
-    padding-bottom: .75rem;
+    padding-bottom: 0;
 }
 
 .slider-container {
@@ -60,7 +60,9 @@
     padding: 0 0;
     width: calc(80% - 80px - 2rem);
     min-width: 230px;
-    height: 100%;
+    height: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     transform: none !important;
     text-align: center;
 }
@@ -127,9 +129,11 @@
 }
 
 .placeholder-for-slides {
-    background-color: var(--body-color);
+    background-color: var(--bg-color);
+    border: dotted 2px rgba(126, 126, 126, .5);
     width: 100%;
-    height: 100%;
+    height: calc(100% - 4px);
+    border-radius: .5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
