--- a/src/components/contents/InputAi.css
+++ b/src/components/contents/InputAi.css
@@ -5,6 +5,9 @@
     align-items: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    background-color: var(--acc-color);
+    box-shadow: 0 0 0 2rem var(--acc-color);
+    color:white;
 }
 
 .ai-area p {
@@ -24,28 +27,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--acc-color);
     border-radius: 1rem;
     position: relative;
     overflow: hidden;
     flex-shrink: 0;
-}
-
-.ai-area .ai-input-wrap:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    aspect-ratio: 1;
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, .5), var(--acc-color), rgba(0, 0, 0, .5));
-    background-position: center center;
-    z-index: 1;
-    pointer-events: none;
-    transform: translateX(-50%) translateY(-50%);
-    opacity: .6;
-    transition: all 1s ease;
+    text-transform: uppercase;
+    border:solid 2px rgba(126, 126, 126, .1);
 }
 
 .ai-area .ai-input-wrap:hover:before, .ai-area .ai-input-wrap:focus:before, .ai-area .ai-input-wrap:active:before {
@@ -60,14 +47,20 @@
 
 .ai-area input {
     display: block;
-    height: calc(100% - 8px);
-    width: calc(100% - 10px);
+    height: calc(100%);
+    width: calc(100%);
+    background-color:rgba(0, 0, 0, .5);
+    color:white;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     border-radius: .9rem;
     border: none;
     position: relative;
     z-index: 0;
+    transition:all .2s ease;
+}
+.ai-area input:hover, .ai-area input:focus, .ai-area input:active{
+    color:white;
 }
 
 .ai-chat-history {
