--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   --bg-color: #1c1b22;
   --text-color: #f0f0f0;
   --acc-color: #279cb3;
+  --dark-color: #1c1b22;
+  --bright-color: #f0f0f0;
 }
 
 [data-theme='light'] {
@@ -11,6 +13,8 @@
   --bg-color: #f0f0f0;
   --text-color: #1f1e25;
   --acc-color: #279cb3;
+  --dark-color: #1c1b22;
+  --bright-color: #f0f0f0;
 }
 
 html, body {
@@ -66,9 +70,9 @@ nav {
 
 #content {
   grid-area: content;
-  height: calc(100% - .5rem);
-  width: 100%;
-  margin: .5rem auto 0 auto;
+  height: calc(100% - 1.5rem);
+  width: calc(100% - 1rem);
+  margin: 1rem auto 0 auto;
 }
 
 #sidebar {
@@ -97,6 +101,7 @@ nav {
 
 @media (max-width:899px) {
 
+  
   #root {
     display: grid;
     grid-template-columns: 0px 50% 50% 0px;
@@ -107,7 +112,7 @@ nav {
   }
 
   #root.mobile-menu--open .mobile-menu {
-    transition: transform .1s linear;
+    transition: transform .3s linear;
     transform: translateX(0);
     box-shadow: 0 0 0 100svw rgba(0, 0, 0, .5);
     background-color: var(--bg-color);
