--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -3,11 +3,20 @@
     width: 100%;
     position: relative;
     overflow-x: hidden;
-    background: var(--body-color);
     padding-bottom: 0;
 }
-
+.slider-icon{
+    position: absolute;
+    left:0;
+    transform:translateX(-100%);
+    width: 50%;
+}
+.slider-icon{
+    font-size:50px;
+}
 .slider-container {
+    background:var(--body-color);
+    color:var(--text-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,13 +27,12 @@
     overflow-x: hidden;
     overflow-y: hidden;
     border-radius: .5rem;
-    background: var(--body-color);
 }
 
 .slider-nav--prev, .slider-nav--next {
     position: absolute;
-    background-color: var(--bg-color);
-    color: var(--text-color);
+    background-color: var(--text-color);
+    color: var(--bg-color);
     top: 50%;
     right: .5rem;
     width: 40px;
@@ -88,7 +96,7 @@
 }
 
 .card-slider>.card {
-    border: solid 2px var(--bg-color);
+    border: solid 2px var(--text-color);
     flex: 0 0 auto;
     transition: transform 0.3s ease, opacity 0.3s ease;
     position: relative;
@@ -129,12 +137,11 @@
 .card-slider>.card:not(.active)>.card {
     margin: 0;
 }
+
 .card-slider>.card:not(.active){
-    opacity: 0.5;
+    opacity: .1;
 }
 .placeholder-for-slides {
-    background-color: var(--bg-color);
-    border: dotted 2px rgba(126, 126, 126, .5);
     width: 100%;
     height: calc(100% - 4px);
     border-radius: .5rem;
@@ -142,4 +149,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+@media (max-width:799px) {
+    .slider-icon{
+        display: none;
+    }
 }
