--- a/src/template/navigation/Menu.css
+++ b/src/template/navigation/Menu.css
@@ -34,17 +34,17 @@ nav {
     align-items: center;
     line-height: 1;
     position: absolute;
-    top: calc(90% - 15px);
-    right: -15px;
+    bottom:100px;
+    right: -20px;
     cursor: pointer;
     transform: rotate(180deg);
 }
 
-.close-desktop-menu:hover {
+#root .close-desktop-menu:hover {
     width: 40px;
     height: 40px;
-    top: calc(90% - 20px);
-    right: -20px;
+    bottom: calc(95px);
+    right: -25px;
 }
 
 .close-desktop-menu svg {
